AssignmentGit/force-app/main/default/objects/Sales_Information__c/Sales_Information__c.object-meta.xml
<CustomObject>
    <label>Sales Information</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>