AssignmentGit/force-app/main/default/objects/Sales_Information__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Customer_Information__c</referenceTo>
    <relationshipLabel>Sales Information</relationshipLabel>
    <relationshipName>Sales_Information</relationshipName>
    <type>Lookup</type>
</CustomField>