AssignmentGit/force-app/main/default/objects/Sales_Information__c/fields/Car_LookUp__c.field-meta.xml
<CustomField>
    <fullName>Car_LookUp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car LookUp</label>
    <referenceTo>Car_Inventory__c</referenceTo>
    <relationshipLabel>Sales Information (Car LookUp)</relationshipLabel>
    <relationshipName>Sales_Information1</relationshipName>
    <type>Lookup</type>
</CustomField>