AssignmentGit/force-app/main/default/objects/Sales_Information__c/fields/Car_Sold__c.field-meta.xml
<CustomField>
    <fullName>Car_Sold__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Sold</label>
    <referenceTo>Car_Inventory__c</referenceTo>
    <relationshipLabel>Sales Information</relationshipLabel>
    <relationshipName>Sales_Information</relationshipName>
    <type>Lookup</type>
</CustomField>