AssignmentGit/force-app/main/default/objects/Sales_Information__c/fields/Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>Customer_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Information</label>
    <referenceTo>Customer_Information__c</referenceTo>
    <relationshipLabel>Sales Information (Customer Information)</relationshipLabel>
    <relationshipName>Sales_Information1</relationshipName>
    <type>Lookup</type>
</CustomField>